--- a/docs/.vitepress/theme/variables.less
+++ b/docs/.vitepress/theme/variables.less
@@ -1,15 +1,3 @@
-html, body {
-  height: 100%;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-}
-
-#app {
-  width: 100%;
-  height: 100%;
-}
-
 :root {
 
   --vp-c-bg: #F2F2F2;
@@ -30,4 +18,6 @@ html, body {
     --color--level-4: #E0AB81;
     --color--level-5: #F2C98B;
   }
+
+  --round-button-size: 2rem;
 }
