feat: 移动端适配

--- a/docs/.vitepress/theme/variables.less
+++ b/docs/.vitepress/theme/variables.less
@@ -1,6 +1,7 @@
+// css variables
 :root {
-
   --vp-c-bg: #F2F2F2;
+  --round-button-bg: rgba(23, 23, 23, .35);
 
   --color--level-1: #F2C98B;
   --color--level-2: #E0AB81;
@@ -10,7 +11,7 @@
 
   &.dark {
     --vp-c-bg: #444;
-    --vp-c-bg-alt: #333;
+    --vp-c-bg-alt: #333;--round-button-bg: rgba(221, 221, 221, .35);
 
     --color--level-1: #462D25;
     --color--level-2: #6A4D31;
@@ -20,4 +21,5 @@
   }
 
   --round-button-size: 2rem;
+  --tool-bar-height: 3rem;
 }
