chore(theme): 优化侧边栏宽度

--- a/docs/.vitepress/theme/variables.less
+++ b/docs/.vitepress/theme/variables.less
@@ -3,6 +3,8 @@
   --vp-c-bg: #F2F2F2;
   --round-button-bg: rgba(23, 23, 23, .35);
 
+  --side-bar-min-width: calc(152px + 3rem * 2);
+
   --color--level-1: #F2C98B;
   --color--level-2: #E0AB81;
   --color--level-3: #93786A;
