--- a/docs/.vitepress/theme/global.less
+++ b/docs/.vitepress/theme/global.less
@@ -22,6 +22,11 @@ body {
   width: 100%;
   margin: 0 auto;
   font-size: 1rem;
+
+  &::selection {
+    background-color: var(--color--level-5);
+    color: var(--color--level-1);
+  }
 }
 
 #app {
